--- a/WebContent/WEB-INF/templates/paging.html
+++ b/WebContent/WEB-INF/templates/paging.html
@@ -11,7 +11,7 @@
 				th:value="${pageInfo.pageNum}" /> <input type="hidden"
 				id="totalCount" name="totalCount" th:value="${pageInfo.totalCount}" />
 			<div id="pageDiv"
-				style="font-size: 15px; text-align: center; margin-top: 10px; font-family:"微软雅黑";" >
+				style="font-size: 15px; text-align: center; margin-top: 10px; font-family:微软雅黑;" >
 				<span th:id="firstBtn" class="btn btn-default"
 					style="color: blue; cursor: pointer"
 					th:onclick="'javascript:firstPage();'">首页</span> <span
