--- a/WebContent/WEB-INF/templates/footer.html
+++ b/WebContent/WEB-INF/templates/footer.html
@@ -16,6 +16,7 @@
 								<div class="collapse navbar-collapse" id="navbar-footer">
 									<ul class="nav navbar-nav navbar-center">
                                        <li><a href="http://www.pan00.com">盘零零首页</a></li>
+                                       <li><a href="http://www.pan00.com/make">分享链接</a></li>
                                        <li><a href="http://www.pan00.com/wangpan">网盘链接</a></li>
                                        <li><a href="http://www.pan00.com/yun">云盘链接</a></li>
                                        <li><a href="http://www.pan00.com/tieba">精彩贴吧</a></li>
