--- a/WebContent/WEB-INF/templates/header.html
+++ b/WebContent/WEB-INF/templates/header.html
@@ -14,7 +14,7 @@
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                             <i class="fa fa-bars"></i>
                         </button>
-                        <a class="navbar-brand" href="index">
+                        <a class="navbar-brand" href="http://www.pan00.com">
                             <img src="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/images/pan_logo.jpg" class="logo logo-display" alt=""  width='90' height='46'>
                             <img src="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/images/pan_logo.jpg" class="logo logo-scrolled" alt="" width='90' height='46'>
                         </a>
@@ -26,6 +26,7 @@
                     <div class="collapse navbar-collapse" id="navbar-menu">
                         <ul class="nav navbar-nav navbar-center">
                              <li><a href="http://www.pan00.com">盘零零首页</a></li>
+                             <li><a href="http://www.pan00.com/make">分享链接</a></li>
                              <li><a href="http://www.pan00.com/wangpan">网盘链接</a></li>
                              <li><a href="http://www.pan00.com/yun">云盘链接</a></li>
                              <li><a href="http://www.pan00.com/tieba">精彩贴吧</a></li>
