--- a/WebContent/WEB-INF/templates/index.html
+++ b/WebContent/WEB-INF/templates/index.html
@@ -26,6 +26,49 @@
 						<div class="f_item_text" style="text-align:center;">
 							<h2>盘零零 - 中国第零盘！</h2>
 						</div>
+						
+						                        <section class="panel" style="">
+                                        <div class="panel-body">
+                                            <div class="tab-content">
+                                                <div id="about-2" class="tab-pane active">
+                                                    <div class="adv-table">
+                                                        <div class="clearfix">
+                                                            <div style="color:red;">
+                                                                <h3>1.分享链接，众人共享才是好：<a style="color:blue" th:href="@{/make}">点击分享链接</a></h3>
+                                                            </div>
+                                                        </div>
+                                                        <div class="space15"></div>
+                                                        <table cellpadding="0" cellspacing="0" border="0" class="display table table-bordered" id="table1" width="100%">
+                                                            <thead>
+                                                            <tr>
+                                                                <th width="20%">链接</th>
+                                                                <th width="30%">发表</th>
+                                                                <th width="30%">更新</th>
+                                                                <th width="20%">访问</th>
+                                                                <!-- <th width="10%">点赞数</th> -->
+                                                            </tr>
+                                                            </thead>
+                                                            <tbody>
+                                                            <tr class="odd">
+                                                               <td style="text-align:center" valign="top" colspan="6" th:if="${#lists.isEmpty(make)}" th:text="没有数据，请稍后刷新。"></td>
+                                                            </tr>
+														    <tr th:each="lm : ${make}">
+														       <td th:each="entry : ${lm}">
+														          <a style="color:blue" th:href="@{/forward(type=yun,id=${entry.id},name=${entry.panShortLink},gogogo=${entry.panLink})}" th:text="${entry.panShortLink}" target="_brank">pan00</a>
+														       </td>
+                                                               <td th:each="entry : ${lm}" th:text="${#dates.format(entry.createTime, 'MM-dd HH:mm')}"></td>
+                                                               <td th:each="entry : ${lm}" th:text="${#dates.format(entry.updateTime, 'MM-dd HH:mm')}"></td>
+                                                               <td th:each="entry : ${lm}" th:text="${entry.visits}"> </td>
+                                                               <!-- <td th:each="entry : ${lm}" th:text="${entry.star}"> </td> -->
+													        </tr>
+                                                            </tbody>
+                                                        </table>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </section>
+                                    
 						<section class="panel" style="">
                                         <div class="panel-body">
                                             <div class="tab-content">
@@ -33,7 +76,7 @@
                                                     <div class="adv-table">
                                                         <div class="clearfix">
                                                             <div style="color:red;">
-                                                                   <h3>1.网盘链接，更多请点击：<a style="color:blue" th:href="@{/wangpan}">网盘链接</a></h3>
+                                                                   <h3>2.网盘链接，更多请点击：<a style="color:blue" th:href="@{/wangpan}">网盘链接</a></h3>
                                                             </div>
                                                         </div>
                                                         <div class="space15"></div>
@@ -83,7 +126,7 @@
                                                     <div class="adv-table">
                                                         <div class="clearfix">
                                                             <div style="color:red;">
-                                                                    <h3>2.云盘链接，更多请点击：<a style="color:blue" th:href="@{/yun}">云盘链接</a></h3>
+                                                                    <h3>3.云盘链接，更多请点击：<a style="color:blue" th:href="@{/yun}">云盘链接</a></h3>
                                                             </div>
                                                         </div>
                                                         <div class="space15"></div>
@@ -125,7 +168,7 @@
                                                     <div class="adv-table">
                                                         <div class="clearfix">
                                                             <div style="color:red;">
-                                                               <h3>3.贴吧链接，更多请点击：<a style="color:blue" th:href="@{/tieba}">贴吧链接</a></h3>
+                                                               <h3>4.贴吧链接，更多请点击：<a style="color:blue" th:href="@{/tieba}">贴吧链接</a></h3>
                                                             </div>
                                                         </div>
                                                         <div class="space15"></div>
@@ -169,7 +212,7 @@
                                                     <div class="adv-table">
                                                         <div class="clearfix">
                                                             <div style="color:red;">
-                                                               <h3>4.贴子链接，更多请点击：<a style="color:blue" th:href="@{/tiezi}">贴子链接</a></h3>
+                                                               <h3>5.贴子链接，更多请点击：<a style="color:blue" th:href="@{/tiezi}">贴子链接</a></h3>
                                                             </div>
                                                         </div>
                                                         <div class="space15"></div>
