--- a/WebContent/WEB-INF/templates/index.html
+++ b/WebContent/WEB-INF/templates/index.html
@@ -34,7 +34,7 @@
                                                     <div class="adv-table">
                                                         <div class="clearfix">
                                                             <div style="color:red;">
-                                                                <h3>1.分享链接，众人共享才是好：<a style="color:blue" th:href="@{/make}">点击分享链接</a></h3>
+                                                                <h3>1.分享你的链接，拒绝和谐：<a style="color:blue" th:href="@{/make}">点击分享</a></h3>
                                                             </div>
                                                         </div>
                                                         <div class="space15"></div>
