--- a/WebContent/WEB-INF/templates/footer.html
+++ b/WebContent/WEB-INF/templates/footer.html
@@ -21,6 +21,7 @@
                                        <li><a href="http://www.pan00.com/yun">云盘链接</a></li>
                                        <li><a href="http://www.pan00.com/tieba">精彩贴吧</a></li>
                                        <li><a href="http://www.pan00.com/tiezi">精选帖子</a></li>
+                                       <li><a href="http://www.pan00.com/star">网红咖姬</a></li>
 									</ul>
 								</div>
 								<!-- /.navbar-collapse -->
