--- a/WebContent/WEB-INF/templates/star.html
+++ b/WebContent/WEB-INF/templates/star.html
@@ -31,7 +31,7 @@
                                                     <div class="adv-table">
                                                         <div class="clearfix">
                                                             <div style="color:red;text-align:center;">
-                                                                   精彩贴子，精彩贴子！点击就直达，懂你所懂！
+                                                                   网红咖姬，网红咖姬！点击就直达，懂你所懂！
                                                             </div>
                                                         </div>
                                                         <div class="space15"></div>
