--- a/WebContent/WEB-INF/templates/header.html
+++ b/WebContent/WEB-INF/templates/header.html
@@ -26,9 +26,10 @@
                     <div class="collapse navbar-collapse" id="navbar-menu">
                         <ul class="nav navbar-nav navbar-center">
                              <li><a href="http://www.pan00.com">盘零零首页</a></li>
+                             <li><a href="http://www.pan00.com/ziyuan">百度云资源</a></li>
                              <li><a href="http://www.pan00.com/make">分享链接</a></li>
-                             <li><a href="http://www.pan00.com/wangpan">网盘链接</a></li>
                              <li><a href="http://www.pan00.com/yun">云盘链接</a></li>
+                             <li><a href="http://www.pan00.com/wangpan">网盘链接</a></li>
                              <li><a href="http://www.pan00.com/tieba">精彩贴吧</a></li>
                              <li><a href="http://www.pan00.com/tiezi">精选帖子</a></li>
                              <li><a href="http://www.pan00.com/star">网红咖姬</a></li>
