--- a/WebContent/WEB-INF/templates/index.html
+++ b/WebContent/WEB-INF/templates/index.html
@@ -27,7 +27,51 @@
 							<h2>盘零零 - 中国第零盘！</h2>
 						</div>
 						
-						                        <section class="panel" style="">
+						        <section class="panel" style="">
+                                        <div class="panel-body">
+                                            <div class="tab-content">
+                                                <div id="about-2" class="tab-pane active">
+                                                    <div class="adv-table">
+                                                        <div class="clearfix">
+                                                            <div style="color:red;">
+                                                               <h3>0.百度云资源，更多请点击：<a style="color:blue" th:href="@{/ziyuan}">百度云资源</a></h3>
+                                                            </div>
+                                                        </div>
+                                                        <div class="space15"></div>
+                                                        <table cellpadding="0" cellspacing="0" border="0" class="display table table-bordered" id="table1" width="100%">
+                                                            <thead>
+                                                            <tr>
+                                                                <th width="30%">链接</th>
+                                                                <!-- <th width="20%">发表</th> -->
+                                                                <th width="30%">更新</th>
+                                                                <!-- <th width="20%">热门</th> -->
+                                                                <th width="20%">访问</th>
+                                                                <!-- <th width="10%">点赞数</th> -->
+                                                            </tr>
+                                                            </thead>
+                                                            <tbody>
+                                                            <tr class="odd">
+                                                               <td valign="top" colspan="6" th:if="${#lists.isEmpty(tieba)}" th:text="没有数据，请稍后刷新。"></td>
+                                                            </tr>
+														    <tr th:each="lm : ${ziyuan}">
+														       <td th:each="entry : ${lm}">
+														          <a style="color:blue" th:href="@{/forward(type=ziyuan,id=${entry.id},name=${entry.fxName},gogogo=${entry.fxLink})}" th:text="${entry.fxName}" target="_brank">pan00</a>
+														       </td>
+                                                               <!-- <td th:each="entry : ${lm}" th:text="${#dates.format(entry.createTime, 'MM-dd HH:mm')}"></td> -->
+                                                               <td th:each="entry : ${lm}" th:text="${#dates.format(entry.postTime, 'MM-dd HH:mm')}"></td>
+                                                               <!-- <td th:each="entry : ${lm}" th:text="${entry.hot}"> </td> -->
+                                                               <td th:each="entry : ${lm}" th:text="${entry.visits}"> </td>
+                                                               <!-- <td th:each="entry : ${lm}" th:text="${entry.star}"> </td> -->
+													        </tr>
+                                                            </tbody>
+                                                        </table>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </section>
+						
+						    <section class="panel" style="">
                                         <div class="panel-body">
                                             <div class="tab-content">
                                                 <div id="about-2" class="tab-pane active">
