--- a/WebContent/WEB-INF/templates/wangpan.html
+++ b/WebContent/WEB-INF/templates/wangpan.html
@@ -61,7 +61,9 @@
 														          <a style="color:blue" th:href="@{/forward(type=wangpan,id=${entry.id},name=${entry.replyName},gogogo=${entry.replyLink})}" th:text="${#strings.substring(entry.replyName,0,1) + '..'}" target="_brank">pan00</a>
 														       </td>
 														       <td th:each="entry : ${lm}">
-														          <a style="color:blue" th:href="@{/forward(type=wangpan_tieba,id=${entry.id},name=${entry.tiebaName},gogogo=${entry.tiebaLink})}" th:text="${#strings.length(entry.tiebaName) le 3?entry.tiebaName:#strings.substring(entry.tiebaName,0,2)+'..'}" target="_brank">pan00</a>
+														          <!-- <a style="color:blue" th:href="@{/forward(type=wangpan_tieba,id=${entry.id},name=${entry.tiebaName},gogogo=${entry.tiebaLink})}" th:text="${#strings.length(entry.tiebaName) le 3?entry.tiebaName:#strings.substring(entry.tiebaName,0,2)+'..'}" target="_brank">pan00</a>
+														           -->
+														           <a style="color:blue" th:href="${entry.tiebaLink}" th:text="${#strings.length(entry.tiebaName) le 3?entry.tiebaName:#strings.substring(entry.tiebaName,0,2)+'..'}" target="_brank">pan00</a>
 														       </td>
                                                                <td th:each="entry : ${lm}" th:text="${#dates.format(entry.postTime, 'MM-dd HH:mm')}"> </td>
                                                                <td th:each="entry : ${lm}" th:text="${#dates.format(entry.updateTime, 'MM-dd HH:mm')}"> </td>
